--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
       <a href="https://scholar.google.com/citations?user=SIS3K3sAAAAJ" target="_blank" style="margin-left:10px">Scholar</a>
     </p>
   </div>
-  <div class="card"><img src="assets/img/profile.svg" alt="Profile image" style="width:100%;border-radius:12px"/></div>
+  <div class="card"><img src="assets/img/profile.jpg" alt="Rahatul Ashakin" style="width:100%;border-radius:12px">
+/></div>
 </section>
 <section>
   <div class="grid">
