--- a/contact.html
+++ b/contact.html
@@ -16,5 +16,5 @@
 <p>Links: <a href="https://github.com/RahatulAshakin" target="_blank">GitHub</a> · <a href="https://www.linkedin.com/in/rahatul-ashakin" target="_blank">LinkedIn</a> · <a href="https://scholar.google.com/citations?user=SIS3K3sAAAAJ" target="_blank">Scholar</a></p>
 </section>
 
-<footer>© <span id="y"></span> Rahatul Ashakin • GitHub Pages</footer></div>
+<footer>© <span id="y"></span> Rahatul Ashakin </footer></div>
 <script>document.getElementById('y').textContent=new Date().getFullYear()</script></body></html>
