--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <section class="hero">
   <div>
-    <h1>Researcher & Data Scientist — Quantum + AI in Healthcare</h1>
-    <p class="muted">Quantum-enhanced NLP (FinBERT + QAOA/VQE), clinical ML, and secure AI.</p>
+    <h1>Quantum-informed optimization for trustworthy, efficient ML</h1>
+    <p class="muted">I design optimization methods—classical and quantum-inspired (QAOA/VQE)—that make modern ML reliable on real hardware and real data. Current focus: clinical & financial NLP, with rigorous robustness, privacy, and reproducibility.</p>
     <p style="margin-top:14px">
       <a class="btn" href="files/Rahatul_Ashakin_CV.pdf" target="_blank">Download CV</a>
       <a href="https://github.com/RahatulAshakin" target="_blank" style="margin-left:10px">GitHub</a>
@@ -22,14 +22,136 @@
     </p>
   </div>
   <div class="card"><img src="assets/img/profile.jpg" alt="Rahatul Ashakin" style="width:100%;border-radius:12px">
-/></div>
+    <figcaption class="caption">
+      <div class="name">Md Rahatul Ashakin</div>
+      <div class="tagline">Prospective PhD Student</div>
+    </figcaption>
+</div>
 </section>
-<section>
+
+<br><br>
+
+<section class="section">
   <div class="grid">
-    <div class="card"><strong>FinBERT + QAOA/VQE</strong><p class="muted">Quantum-aided hyperparameter search for sentiment analysis.</p></div>
-    <div class="card"><strong>Healthcare AI</strong><p class="muted">Clinical modeling and interpretability.</p></div>
+    <div class="card">
+      <h2>Education</h2>
+<ul class="timeline">
+  <li>
+    <span class="meta">Oct 2022 – Mar 2024</span>
+    M.S., Information Technology — Washington University of Science and Technology, Alexandria, VA, USA
+  </li>
+  <li>
+    <span class="meta">Sep 2013 – Aug 2018</span>
+    B.S., Computer Science and Engineering — North South University, Dhaka, Bangladesh
+  </li>
+</ul>
+
+  </div>
+    <div class="card">
+      <h2>Research Interests</h2>
+<ul class="bullets">
+  <li>Optimization for reliable & efficient ML (classical + quantum-inspired: QAOA, VQE)</li>
+  <li>Trustworthy ML &mdash; robustness, calibration, interpretability</li>
+  <li>Privacy-preserving & federated learning &mdash; post-quantum security (FHE/HE), secure aggregation</li>
+  <li>Clinical & financial NLP &mdash; risk modeling, sentiment, information extraction</li>
+  <li>Hardware-/resource-aware deployment &mdash; edge/IoT systems and noisy quantum backends</li>
+</ul>
+
+    </div>
   </div>
 </section>
 
-<footer>© <span id="y"></span> Rahatul Ashakin • GitHub Pages</footer></div>
+<br><br>
+
+<section id="selected-publications" class="card">
+  <h2>Selected Publications</h2>
+  <ol class="pubs">
+    <!-- C1 -->
+    <li class="pub">
+      <div><strong>Variational Quantum Circuits for Molecular Classification Using Graph Neural Network</strong></div>
+      <div class="muted">
+        Don Roosan, <u>Md Rahatul Ashakin</u>, Rubayat Khan, Hasiba Mashed Khan, Tiffany Khou, Maria-Isabel Carnasciali, Mohammad Rifat Haider
+      </div>
+      <div>International Conference on Quantum Communications, Networking, and Computing (QCNC), 2025</div>
+      <p class="links" style="margin-top:8px">
+        <a class="btn" href="https://ieeexplore.ieee.org/abstract/document/11000219" target="_blank" rel="noopener">PDF / Abstract</a>
+        <a style="margin-left:10px" href="https://doi.org/10.1109/QCNC64685.2025.00074" target="_blank" rel="noopener">doi:10.1109/QCNC64685.2025.00074</a>
+      </p>
+    </li>
+
+    <!-- C2 -->
+    <li class="pub">
+      <div><strong>Quantum Variational Transformer Model for Enhanced Cancer Classification</strong></div>
+      <div class="muted">
+        Don Roosan, Rubayat Khan, <u>Md Rahatul Ashakin</u>, Tiffany Khou, Saif Nirzhor, Mohammad Rifat Haider
+      </div>
+      <div>IEAI2025 BALI</div>
+      <p class="links" style="margin-top:8px">
+        <a class="btn" href="https://arxiv.org/abs/2506.21641" target="_blank" rel="noopener">PDF (preprint)</a>
+        <a style="margin-left:10px" href="https://doi.org/10.48550/arXiv.2506.21641" target="_blank" rel="noopener">doi:10.48550/arXiv.2506.21641</a>
+      </p>
+    </li>
+
+    <!-- C3 -->
+    <li class="pub">
+      <div><strong>Adaptive Multimodal Artificial Intelligence with Liquid Neural Network for Edge Computing-Based Augmented Reality</strong></div>
+      <div class="muted">
+        Don Roosan, Rubayat Khan, <u>Md Rahatul Ashakin</u>, Tiffany Khou
+      </div>
+      <div>6th International Conference on Industrial Engineering and Artificial Intelligence (IEAI 2025)</div>
+      <p class="links" style="margin-top:8px">
+        <a class="btn" href="https://www.researchgate.net/publication/387744776_Adaptive_Multimodal_Artificial_Intelligence_with_Liquid_Neural_Network_for_Edge_Computing-Based_Augmented_Reality?channel=doi&linkId=677b34f2117f340ec3f65a4b&showFulltext=true" target="_blank" rel="noopener">PDF (preprint)</a>
+        <span class="muted" style="margin-left:10px">DOI: 10.13140/RG.2.2.19700.26245</span>
+      </p>
+    </li>
+
+    <!-- J1 (first-authored) -->
+    <li class="pub">
+      <div><strong>Transforming to Smart Healthcare: AI Innovations for Improving Affordability, Efficiency, and Accessibility</strong></div>
+      <div class="muted">
+        <u>Md Rahatul Ashakin</u>, Md Shishir Bhuyian, Md Refat Hosain, Rifah Sajida Deya, Sayed Eqramul Hasan
+      </div>
+      <div><em>Pathfinder of Research</em>, 2024</div>
+      <p class="links" style="margin-top:8px">
+        <a class="btn" href="https://pathfinderpub.com/index.php/pathfinder-of-research/article/view/21/14" target="_blank" rel="noopener">PDF</a>
+        <span class="muted" style="margin-left:10px">DOI: doi.org/10.69937/pf.por.2.2.21</span>
+      </p>
+    </li>
+
+    <!-- J3 (first-authored) -->
+    <li class="pub">
+      <div><strong>Enhancing Digital Signal Processing: Obstacles and Advancements in FPGA and ASIC Hardware Implementations</strong></div>
+      <div class="muted">
+        <u>Md Rahatul Ashakin</u>, Bayazid Hossain, Syed Mosaddik Hossain Ifty
+      </div>
+      <div><em>Pathfinder of Research</em>, 2024</div>
+      <p class="links" style="margin-top:8px">
+        <a class="btn" href="https://pathfinderpub.com/index.php/pathfinder-of-research/article/view/23/16" target="_blank" rel="noopener">PDF</a>
+        <span class="muted" style="margin-left:10px">DOI: doi.org/10.2018/ew2fma62</span>
+      </p>
+    </li>
+  </ol>
+</section>
+
+<br><br>
+
+
+<section>
+  <div class="grid">
+    <div class="card">
+      <strong>FinBERT + QAOA/VQE</strong>
+      <p class="muted">Quantum-aided hyperparameter search for financial sentiment (FinBERT), with a reproducible pipeline.</p>
+      <p><a href="https://github.com/RahatulAshakin/FinBERT_Quantum_Optimization" target="_blank" rel="noopener">GitHub →</a></p>
+    </div>
+
+    <div class="card">
+      <strong>Quantum Optimization Sandbox (ad-quantum-repurpose)</strong>
+      <p class="muted">Config-first scaffold for ML experiments using quantum-inspired optimization (QAOA/VQE) and classical baselines.</p>
+      <p><a href="https://github.com/RahatulAshakin/ad-quantum-repurpose" target="_blank" rel="noopener">GitHub →</a></p>
+    </div>
+  </div>
+</section>
+
+
+<footer>© <span id="y"></span> Rahatul Ashakin </footer></div>
 <script>document.getElementById('y').textContent=new Date().getFullYear()</script></body></html>
