--- a/publications.html
+++ b/publications.html
@@ -1,22 +1,235 @@
 <!doctype html><html lang="en"><head>
-<meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
+<meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>Publications — Rahatul Ashakin</title>
 <link rel="stylesheet" href="assets/css/style.css"/></head>
-<body><div class="container"><header><div><strong>Rahatul Ashakin</strong></div><nav>
+<body>
+<div class="container">
+  <header>
+    <div><strong>Rahatul Ashakin</strong></div>
+    <nav>
       <a href="index.html">Home</a>
       <a href="publications.html" class="active">Publications</a>
       <a href="projects.html">Projects</a>
       <a href="bio.html">Bio</a>
       <a href="contact.html">Contact</a>
-    </nav></header>
+    </nav>
+  </header>
 
-<section class="card">
-  <h1>Selected Publications</h1>
-  <ol>
-    <li><strong>Quantum Variational Transformers for Cancer Classification</strong> — 2024. <em>Ashakin, R., et al.</em></li>
-    <li><strong>Quantum-Enhanced Blockchain for Drug Discovery</strong> — 2024. <em>Ashakin, R., et al.</em></li>
+  <section id="selected-publications" class="card">
+  <h2>Selected Publications</h2>
+
+  <!-- ===================== -->
+  <!-- Conference Proceedings -->
+  <!-- ===================== -->
+  <h3>Conference Proceedings</h3>
+  <ol class="pubs">
+    <!-- C1 -->
+    <li class="pub">
+      <div><strong>Variational Quantum Circuits for Molecular Classification Using Graph Neural Network</strong></div>
+      <div class="muted">Don Roosan, <u>Md Rahatul Ashakin</u>, Rubayat Khan, Hasiba Mashed Khan, Tiffany Khou, Maria-Isabel Carnasciali, Mohammad Rifat Haider</div>
+      <div>International Conference on Quantum Communications, Networking, and Computing (QCNC), 2025</div>
+      <p class="links" style="margin-top:8px">
+        <a class="btn" href="https://ieeexplore.ieee.org/abstract/document/11000219" target="_blank" rel="noopener">PDF / Abstract</a>
+        <a style="margin-left:10px" href="https://doi.org/10.1109/QCNC64685.2025.00074" target="_blank" rel="noopener">doi:10.1109/QCNC64685.2025.00074</a>
+      </p>
+      <details><summary>BibTeX</summary>
+        <pre>@inproceedings{roosan2025vqcgnn,
+  title={Variational Quantum Circuits for Molecular Classification Using Graph Neural Network},
+  author={Roosan, Don and Ashakin, Md Rahatul and Khan, Rubayat and Khan, Hasiba Mashed and Khou, Tiffany and Carnasciali, Maria-Isabel and Haider, Mohammad Rifat},
+  booktitle={Proc. IEEE QCNC},
+  year={2025},
+  doi={10.1109/QCNC64685.2025.00074},
+  url={https://ieeexplore.ieee.org/abstract/document/11000219}
+}</pre>
+      </details>
+    </li>
+
+    <!-- C2 -->
+    <li class="pub">
+      <div><strong>Quantum Variational Transformer Model for Enhanced Cancer Classification</strong></div>
+      <div class="muted">Don Roosan, Rubayat Khan, <u>Md Rahatul Ashakin</u>, Tiffany Khou, Saif Nirzhor, Mohammad Rifat Haider</div>
+      <div>IEAI 2025 (Bali)</div>
+      <p class="links" style="margin-top:8px">
+        <a class="btn" href="https://arxiv.org/abs/2506.21641" target="_blank" rel="noopener">PDF (preprint)</a>
+        <a style="margin-left:10px" href="https://doi.org/10.48550/arXiv.2506.21641" target="_blank" rel="noopener">doi:10.48550/arXiv.2506.21641</a>
+      </p>
+      <details><summary>BibTeX</summary>
+        <pre>@inproceedings{roosan2025qvt,
+  title={Quantum Variational Transformer Model for Enhanced Cancer Classification},
+  author={Roosan, Don and Khan, Rubayat and Ashakin, Md Rahatul and Khou, Tiffany and Nirzhor, Saif and Haider, Mohammad Rifat},
+  booktitle={Proc. IEAI},
+  year={2025},
+  eprint={2506.21641},
+  archivePrefix={arXiv},
+  primaryClass={cs.LG},
+  doi={10.48550/arXiv.2506.21641},
+  url={https://arxiv.org/abs/2506.21641}
+}</pre>
+      </details>
+    </li>
+
+    <!-- C3 -->
+    <li class="pub">
+      <div><strong>Adaptive Multimodal Artificial Intelligence with Liquid Neural Network for Edge Computing-Based Augmented Reality</strong></div>
+      <div class="muted">Don Roosan, Rubayat Khan, <u>Md Rahatul Ashakin</u>, Tiffany Khou</div>
+      <div>6th International Conference on Industrial Engineering and Artificial Intelligence (IEAI 2025)</div>
+      <p class="links" style="margin-top:8px">
+        <a class="btn" href="https://www.researchgate.net/publication/387744776_Adaptive_Multimodal_Artificial_Intelligence_with_Liquid_Neural_Network_for_Edge_Computing-Based_Augmented_Reality?channel=doi&linkId=677b34f2117f340ec3f65a4b&showFulltext=true" target="_blank" rel="noopener">PDF (preprint)</a>
+        <a style="margin-left:10px" href="https://doi.org/10.13140/RG.2.2.19700.26245" target="_blank" rel="noopener">doi:10.13140/RG.2.2.19700.26245</a>
+      </p>
+      <details><summary>BibTeX</summary>
+        <pre>@inproceedings{roosan2025liquidmmar,
+  title={Adaptive Multimodal AI with Liquid Neural Network for Edge Computing-Based Augmented Reality},
+  author={Roosan, Don and Khan, Rubayat and Ashakin, Md Rahatul and Khou, Tiffany},
+  booktitle={Proc. IEAI},
+  year={2025},
+  doi={10.13140/RG.2.2.19700.26245},
+  url={https://www.researchgate.net/publication/387744776_Adaptive_Multimodal_Artificial_Intelligence_with_Liquid_Neural_Network_for_Edge_Computing-Based_Augmented_Reality}
+}</pre>
+      </details>
+    </li>
+
+    <!-- C4 -->
+    <li class="pub">
+      <div><strong>Quantum AI Enhanced Blockchain Security for Drug Discovery</strong></div>
+      <div class="muted">Don Roosan, Tiffany Khou, Brian Pham, Yawen Li, <u>Md Rahatul Ashakin</u>, Hasiba Mashed Khan, Rubayat Khan, Mohammad Rifat Haider</div>
+      <div>9th International Conference on Innovation in Artificial Intelligence (ICICI 2025)</div>
+      <p class="links" style="margin-top:8px">
+        <a class="btn" href="https://www.researchgate.net/publication/387706686_Quantum_AI_enhanced_blockchain_security_for_drug_discovery" target="_blank" rel="noopener">PDF (preprint)</a>
+        <span class="muted" style="margin-left:10px">DOI: pending</span>
+      </p>
+      <details><summary>BibTeX</summary>
+        <pre>@inproceedings{roosan2025qai_blockchain,
+  title={Quantum AI Enhanced Blockchain Security for Drug Discovery},
+  author={Roosan, Don and Khou, Tiffany and Pham, Brian and Li, Yawen and Ashakin, Md Rahatul and Khan, Hasiba Mashed and Khan, Rubayat and Haider, Mohammad Rifat},
+  booktitle={Proc. ICICI},
+  year={2025},
+  url={https://www.researchgate.net/publication/387706686_Quantum_AI_enhanced_blockchain_security_for_drug_discovery}
+}</pre>
+      </details>
+    </li>
   </ol>
-</section>
 
-<footer>© <span id="y"></span> Rahatul Ashakin • GitHub Pages</footer></div>
-<script>document.getElementById('y').textContent=new Date().getFullYear()</script></body></html>
+  <!-- ======= -->
+  <!-- Journals -->
+  <!-- ======= -->
+  <h3>Journals</h3>
+  <ol class="pubs">
+    <!-- J1 -->
+    <li class="pub">
+      <div><strong>Transforming to Smart Healthcare: AI Innovations for Improving Affordability, Efficiency, and Accessibility</strong></div>
+      <div class="muted"><u>Md Rahatul Ashakin</u>, Md Shishir Bhuyian, Md Refat Hosain, Rifah Sajida Deya, Sayed Eqramul Hasan</div>
+      <div><em>Pathfinder of Research</em>, 2024</div>
+      <p class="links" style="margin-top:8px">
+        <a class="btn" href="https://pathfinderpub.com/index.php/pathfinder-of-research/article/view/21/14" target="_blank" rel="noopener">PDF</a>
+        <a style="margin-left:10px" href="https://doi.org/10.69937/pf.por.2.2.21" target="_blank" rel="noopener">doi:10.69937/pf.por.2.2.21</a>
+      </p>
+      <details><summary>BibTeX</summary>
+        <pre>@article{ashakin2024smarthealth,
+  title={Transforming to Smart Healthcare: AI Innovations for Improving Affordability, Efficiency, and Accessibility},
+  author={Ashakin, Md Rahatul and Bhuyian, Md Shishir and Hosain, Md Refat and Deya, Rifah Sajida and Hasan, Sayed Eqramul},
+  journal={Pathfinder of Research},
+  year={2024},
+  doi={10.69937/pf.por.2.2.21},
+  url={https://pathfinderpub.com/index.php/pathfinder-of-research/article/view/21/14}
+}</pre>
+      </details>
+    </li>
+
+    <!-- J2 -->
+    <li class="pub">
+      <div><strong>Adoption of IoT in Agriculture — Systematic Review</strong></div>
+      <div class="muted">SM Hossain Ifty, Bayazid Hossain, <u>Md Rahatul Ashakin</u>, Mazharul Islam Tusher, Rashedul Haque</div>
+      <div><em>Applied Agriculture Sciences</em>, 2023</div>
+      <p class="links" style="margin-top:8px">
+        <a class="btn" href="https://publishing.emanresearch.org/Journal/Abstract/agriculture-119563" target="_blank" rel="noopener">Publisher</a>
+        <a style="margin-left:10px" href="https://www.researchgate.net/profile/Atiqur-Sunny/publication/380725150_Adoption_of_IoT_in_Agriculture_-Systematic_Review/links/664b7377479366623afe7bf2/Adoption-of-IoT-in-Agriculture-Systematic-Review.pdf" target="_blank" rel="noopener">PDF</a>
+        <a style="margin-left:10px" href="https://doi.org/10.25163/agriculture.119563" target="_blank" rel="noopener">doi:10.69937/pf.por.2.2.21</a>
+      </p>
+      <details><summary>BibTeX</summary>
+        <pre>@article{ifty2023iotagri,
+  title={Adoption of IoT in Agriculture—Systematic Review},
+  author={Ifty, SM Hossain and Hossain, Bayazid and Ashakin, Md Rahatul and Tusher, Mazharul Islam and Haque, Rashedul},
+  journal={Applied Agriculture Sciences},
+  year={2023},
+  url={https://publishing.emanresearch.org/Journal/Abstract/agriculture-119563}
+}</pre>
+      </details>
+    </li>
+
+    <!-- J3 -->
+<li class="pub">
+  <div><strong>Enhancing Digital Signal Processing: Obstacles and Advancements in FPGA and ASIC Hardware Implementations</strong></div>
+  <div class="muted"><u>Md Rahatul Ashakin</u>, Bayazid Hossain, Syed Mosaddik Hossain Ifty</div>
+  <div><em>Pathfinder of Research</em>, 2024</div>
+  <p class="links" style="margin-top:8px">
+    <a class="btn" href="https://pathfinderpub.com/index.php/pathfinder-of-research/article/view/23" target="_blank" rel="noopener">Publisher</a>
+     <a style="margin-left:10px" href="https://pathfinderpub.com/index.php/pathfinder-of-research/article/view/23/16" target="_blank" rel="noopener">PDF</a>
+    <a style="margin-left:10px" href="https://doi.org/10.2018/ew2fma62" target="_blank" rel="noopener">doi:10.2018/ew2fma62</a>
+  </p>
+</li>
+
+    <!-- J4 -->
+<li class="pub">
+  <div><strong>IOT-Based Smart Agriculture in Bangladesh: An Overview</strong></div>
+  <div class="muted">SM Hossain Ifty, <u>Md Rahatul Ashakin</u>, B Hossain, S Afrin, A Sattar, R Chowdhury, M I Tusher, P K Bhowmik, M T Mia, T Islam, M Tufael, A R Sunny</div>
+  <div><em>Applied Agriculture Sciences</em>, 2023</div>
+  <p class="links" style="margin-top:8px">
+    <a class="btn" href="https://publishing.emanresearch.org/Journal/Abstract/agriculture-119563#" target="_blank" rel="noopener">Publisher</a>
+    <a style="margin-left:10px" href="https://d1wqtxts1xzle7.cloudfront.net/112824504/Updated_Ifty_et_al._2023_IoT_Agriculture_119563_1_-libre.pdf?1711626287=&response-content-disposition=inline%3B+filename%3DIOT_Based_Smart_Agriculture_in_Banglades.pdf&Expires=1756204892&Signature=NBHerxGEM1s9Gv9TSHhct3bRSsIJPTbfFU5m79x7tRkD70AigpizHFGWtqoMG3U-GUAr6iBzEjtrJNlZ-yxauWSi2fcuVRWNawh0XIyMpgX--abiwHICKZ0JQicJnMTABoFaQPuFOk0QePdiGciuA4kn81qAEA8dt7xdGgH9kLTLKRa-bbUIFpJjTNymnLlpwtUfFm6YtfsjPxaPV6mlvX5ZOBZnXMfmdx2GiWfFQXmvx3G124dj0Xck1WbftWt3qL15ovBTKzmSB-ev7wMDqIV6BJGDxBFEVKApYpf2xYHQeRQ-Z9hx-BQHx8vsE75Ehupju0dv4S5Qd2BjSLBvyw__&Key-Pair-Id=APKAJLOHF5GGSLRBV4ZA" target="_blank" rel="noopener">PDF</a>
+    <a style="margin-left:10px" href="https://doi.org/10.25163/agriculture.119563" target="_blank" rel="noopener">doi:10.25163/agriculture.119563</a>
+  </p>
+</li>
+
+    <!-- J5 -->
+    <li class="pub">
+      <div><strong>Emergence of Antibiotic-Resistant Infections in ICU Patients</strong></div>
+      <div class="muted">Md Tahsin Salam, Kaniz Fatema Bari, Md Mostafizur Rahman, Dewan Muhammad Mahmudul Gafur, M O Faruk, K Akter, F Irin, <u>Md Rahatul Ashakin</u>, T A Shaikat, A C Das, M Tufael, M M Mithun, A R Sunny</div>
+      <div><em>Journal of Angiotherapy</em>, 2024</div>
+      <p class="links" style="margin-top:8px">
+        <a class="btn" href="https://www.researchgate.net/profile/Md-Mostafizur-Rahman-14/publication/380937258_Emergence_of_Antibiotic-Resistant_Infections_in_ICU_Patients/links/668eb6c73e0edb1e0fdb64d2/Emergence-of-Antibiotic-Resistant-Infections-in-ICU-Patients.pdf" target="_blank" rel="noopener">PDF</a>
+        <a style="margin-left:10px" href="https://doi.org/10.25163/angiotherapy.859560" target="_blank" rel="noopener">doi.org/10.25163/angiotherapy.859560</a>
+      </p>
+      <details><summary>BibTeX</summary>
+        <pre>@article{salam2024icuabx,
+  title={Emergence of Antibiotic-Resistant Infections in ICU Patients},
+  author={Salam, Md Tahsin and Bari, Kaniz Fatema and Rahman, Md Mostafizur and Gafur, Dewan Muhammad Mahmudul and Faruk, M O and Akter, K and Irin, F and Ashakin, Md Rahatul and Shaikat, T A and Das, A C and Tufael, M and Mithun, M M and Sunny, A R},
+  journal={Journal of Angiotherapy},
+  year={2024}
+}</pre>
+      </details>
+    </li>
+
+    <!-- J6 -->
+    <li class="pub">
+      <div><strong>Advancements, Applications, and Future Directions of Artificial Intelligence in Healthcare</strong></div>
+      <div class="muted">SMH Ifty, F Irin, MSS Shovon, MHH Amjad, P K Bhowmik, R Ahmed, <u>Md Rahatul Ashakin</u>, B Hossain, M Mushfiq, A Sattar, R Chowdhury, A R Sunny</div>
+      <div><em>Journal of Angiotherapy</em>, 2024</div>
+      <p class="links" style="margin-top:8px">
+        <a class="btn" href="https://publishing.emanresearch.org/Journal/Abstract/angiotherapy-889843" target="_blank" rel="noopener">Publisher</a>
+        <a style="margin-left:10px" href="https://doi.org/10.25163/angiotherapy.889843" target="_blank" rel="noopener">doi.org/10.25163/angiotherapy.889843</a>
+      </p>
+      <details><summary>BibTeX</summary>
+        <pre>@article{ifty2024aihealth,
+  title={Advancements, Applications, and Future Directions of Artificial Intelligence in Healthcare},
+  author={Ifty, SMH and Irin, F and Shovon, MSS and Amjad, MHH and Bhowmik, P K and Ahmed, R and Ashakin, Md Rahatul and Hossain, B and Mushfiq, M and Sattar, A and Chowdhury, R and Sunny, A R},
+  journal={Journal of Angiotherapy},
+  year={2024},
+  url={https://publishing.emanresearch.org/Journal/Abstract/angiotherapy-889843}
+}</pre>
+      </details>
+    </li>
+  </ol>
+
+
+    <p class="muted" style="margin-top:10px">
+      For a full list with citation counts, see my
+      <a href="https://scholar.google.com/citations?user=SIS3K3sAAAAJ" target="_blank" rel="noopener">Google Scholar</a>.
+    </p>
+  </section>
+
+  <footer>© <span id="y"></span> Rahatul Ashakin </footer>
+</div>
+<script>document.getElementById('y').textContent=new Date().getFullYear()</script>
+</body></html>
